[package]
authors = ["Prajith <kprajith@amazon.com>"]
edition = "2018"
name = "rust-simulator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.21.0"
env_logger = "0.8.4"
log = "0.4.0"
prettytable-rs = "^0.8"
rand = "0.8.4"
